# ansibilo

./: .travis.yml  CHANGES.rst  Changelog.rst  MANIFEST.in  Makefile  README.rst  requirements-dev.txt  setup.cfg  setup.py  tox.ini
docs/: cli.rst  conf.py  facto.rst  index.rst  plugins.rst  sphinxext.rst
src/ansibilo/: __main__.py  sphinxext.py
src/ansibilo/inventory/: exporters.py  utils.py
src/ansibilo/modules/: facto.py
src/ansibilo/plugins/callbacks/: git_branch_uptodate.py  pretty_print_result.py  vaulted_slack.py
src/ansibilo/plugins/filters/: defaults.py
tests/: test_ansible_import.py  test_filters.py  test_inventory.py  utils.py
tests/resources/: hosts.ini
