[metadata]
name = ansibilo
version = 0.3
author = Polyconseil
author_email = opensource+ansibilo@polyconseil.fr
url = https://github.com/Polyconseil/ansibilo/
description = Set of tools for Ansible
long_description = file: README.rst
keywords = ansible, tools
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: System :: Systems Administration

[options]
zip_safe = False
include_package_data = True
setup_requires =
    setuptools
install_requires =
    ansible>=2.4
    click
    graphviz
    humanize
    netaddr
    requests

[options.extras_require]
sphinx =
    sphinx

[options.entry_points]
console_scripts =
    ansibilo = ansibilo.__main__:main

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10

[bdist_wheel]
universal = true

[zest.releaser]
create-wheel = yes
